<resources>
    <string name="app_name">Walletline</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_you_have_an_account">Dont you have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="walletline">Walletline</string>
</resources>