<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/main_gradient"
    android:padding="@dimen/paddingAllPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <EditText
            android:id="@+id/et_fullNameSU"
            android:hint="@string/full_name"
            style="@style/signEdiField"/>
        <EditText
            android:id="@+id/et_emailSU"
            android:hint="@string/email"
            style="@style/signEdiField"/>

        <EditText
            android:id="@+id/et_passwordSU"
            android:hint="@string/password"
            style="@style/signEdiField"/>
        <EditText
            android:id="@+id/et_cpasswordSU"
            android:hint="@string/confirm_password"
            style="@style/signEdiField"/>
        <Button
            android:id="@+id/btn_signUp"
            android:text="@string/sign_up"
            style="@style/signBtnSubmit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/signInBelowCard"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white90"
            android:textSize="@dimen/SignBelowMsg"/>
        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/SignBelowMsg"
            android:layout_marginStart="@dimen/signBeloMsgPadding"/>
    </LinearLayout>

</LinearLayout>

</layout>